added Chinese translation, thanks to Tutur

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -6,6 +6,7 @@
   "priorityTooltipOne": "Mods with lower order have higher priority.",
   "priorityTooltipTwo": "Right click on mod number to reset or here to reset all.",
   "priorityTooltipThree": "Don't change mod priority unless you really know what you're doing!",
+  "order": "Order",
   "pack": "Pack",
   "dataPacks": "Data Packs",
   "enabled": "Enabled",
