new feature: mod customization

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -200,5 +200,26 @@
   "mergeModsHelp2": "The merged mod won't have the same file names as the merged mods which can affect load order priority, so skip merging mods that require manual load order fiddling. That said, those kind of mods should be incredibly rare and as a rule you should never manually touch load order anyway!",
   "mergeModsHelp3": "When mods get updated the merged pack will have the old outdated mod inside it. You should get a warning in red (it'll be above the Play button) warning you about this and you can then right click the merged pack and use the Update (Re-merge) option which will update the merged pack. The warning can appear when you start the app but disappears once we get newer info from the workshop, you don't have to update it in that case.",
   "mergeModsHelp4": "You can leave the mods that have been merged enabled in the mod manager, the manager will automatically skip them if they're already present in a merged mod you have enabled. This is reliant on the .json file, if it's missing you'll have to disable those mods or the game will crash since it doesn't like duplicate files in mods.",
-  "language": "Language:"
+  "language": "Language:",
+  "customizeMod": "Customize Mod",
+  "groupingsUnitPermissions": "Units, Per Group",
+  "buildingsPermissions": "Buildings",
+  "unit": "Unit",
+  "unitKeySortTableOrder": "(Default Order)",
+  "owner": "Owner",
+  "group": "Group",
+  "allowed": "Allowed",
+  "factionsUnitPermissions": "Units, Per Faction",
+  "uniqueAgentsPermissions": "Legendary Lords And Heroes",
+  "agentSubtype": "Agent Subtype",
+  "campaignGroup": "Campaign Group",
+  "agentsPermissions": "Lords And Heroes",
+  "agentSubtypeAndType": "Agent Subtype (Agent Type)",
+  "faction": "Faction",
+  "Building": "Building",
+  "cultureSubcultureFaction": "Culture, Subculture, Faction (All 3 Optional)",
+  "modCustomizationHelp1": "This panel allows you to customize mods, currently you can disable units, buildings and agents (lords and heroes).",
+  "modCustomizationHelp2": "The way the game handles unit permissions, a unit can have a group permission (which can affect multiple factions) or a per-faction permission, or both. For game stability reasons only group permissions can be disabled. Note this won't affect custom battles since that uses a different system!",
+  "modCustomizationHelp3": "Generic agents (lords and heroes) are tied to campaign groups and you can disable them that way, except for legendary agents which have their own tab.",
+  "modCustomizationHelp4": "The manager customizes a mod by creating a copy of the pack, with the necessary changes, inside a new 'whmm_overwrites' subfolder inside your WH3 folder each time you start the game. Note those copies are currently never deleted or cleaned up. I'm not sure how this affects multiplayer but it's likely you'll get 'different versions' warnings since the game thinks your packs are different even when they're not, but I'm not sure. Removing the customization for a mod will also give you a warning when loading a save that the pack is missing since we're now using the original mod pack, not the customized version of it, but you can ignore that."
 }
