--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -200,5 +200,26 @@
   "mergeModsHelp2": "合并的模组不会与被合并模组同名，因为文件名会影响加载顺序，因此跳过那些需要手动调整排序的模组。虽然这样的模组比较罕见，但通常情况下，你不应该手动修改模组的加载顺序！",
   "mergeModsHelp3": "当模组有新的更新时，合并模组包中将会存在过期的模组。你会在启动游戏按钮上得到红色的警告，你可以通过右键点击合并模组包，并且使用更新（重新合并）选项，这将会更新合并包。这个警告可能会在你启动app时出现，同时也会随着软件更新创意工坊内容后消失，这种情况下你不必执行更新。",
   "mergeModsHelp4": "你可以在管理器中保持那些已被合并过的（单个）模组的启用状态，管理器如果发现已启用的模组被包含在一个合并包中，会自动跳过他们。这个功能依赖于.json文件，如果json文件缺失，那你就必须得手动禁用那些模组，否则游戏将可能由于重复文件而崩溃。",
-  "language": "语言:"
+  "language": "语言:",
+  "customizeMod": "Customize Mod",
+  "groupingsUnitPermissions": "Units, Per Group",
+  "buildingsPermissions": "Buildings",
+  "unit": "Unit",
+  "unitKeySortTableOrder": "(Default Order)",
+  "owner": "Owner",
+  "group": "Group",
+  "allowed": "Allowed",
+  "factionsUnitPermissions": "Units, Per Faction",
+  "uniqueAgentsPermissions": "Legendary Lords And Heroes",
+  "agentSubtype": "Agent Subtype",
+  "campaignGroup": "Campaign Group",
+  "agentsPermissions": "Lords And Heroes",
+  "agentSubtypeAndType": "Agent Subtype (Agent Type)",
+  "faction": "Faction",
+  "Building": "Building",
+  "cultureSubcultureFaction": "Culture, Subculture, Faction (All 3 Optional)",
+  "modCustomizationHelp1": "This panel allows you to customize mods, currently you can disable units, buildings and agents (lords and heroes).",
+  "modCustomizationHelp2": "The way the game handles unit permissions, a unit can have a group permission (which can affect multiple factions) or a per-faction permission, or both. For game stability reasons only group permissions can be disabled. Note this won't affect custom battles since that uses a different system!",
+  "modCustomizationHelp3": "Generic agents (lords and heroes) are tied to campaign groups and you can disable them that way, except for legendary agents which have their own tab.",
+  "modCustomizationHelp4": "The manager customizes a mod by creating a copy of the pack, with the necessary changes, inside a new 'whmm_overwrites' subfolder inside your WH3 folder each time you start the game. Note those copies are currently never deleted or cleaned up. I'm not sure how this affects multiplayer but it's likely you'll get 'different versions' warnings since the game thinks your packs are different even when they're not, but I'm not sure. Removing the customization for a mod will also give you a warning when loading a save that the pack is missing since we're now using the original mod pack, not the customized version of it, but you can ignore that."
 }
