disable most of the game start options for games other than wh3

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -74,12 +74,27 @@
   "createSteamCollectionHelp3": "Paste the script you recieved from pressing the \"Copy Creation Script To Clipboard\" button into the console and press enter:",
   "createSteamCollectionHelp4": "Two buttons will appear, one to add mods to the collection and a reset button that removes any added mods. Click the green + button that appears and wait for the page to reload.",
   "configureFolderLocations": "Configure Folder Locations",
-  "setFolderPathsManually": "The mod manager tried to get WH3 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
-  "setFolderPathsManuallyOptionally": "The mod manager automatically found WH3 folder paths from the Windows Registry, but you can set them manually here.",
+  "setFolderPathsManuallyWH2": "The mod manager tried to get WH2 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyWH3": "The mod manager tried to get WH3 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyThreeKingdoms": "The mod manager tried to get Three Kingdoms folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyOptionallyWH2": "The mod manager automatically found WH2 folder paths from the Windows Registry, but you can set them manually here.",
+  "setFolderPathsManuallyOptionallyWH3": "The mod manager automatically found WH3 folder paths from the Windows Registry, but you can set them manually here.",
+  "setFolderPathsManuallyOptionallyThreeKingdoms": "The mod manager automatically found Three Kingdoms folder paths from the Windows Registry, but you can set them manually here.",
+  "wh2": "Warhammer 2",
+  "wh3": "Warhammer 3",
+  "threeKingdoms": "Three Kingdoms",
   "mainWH3Folder": "The main Warhammer 3 folder that contains Warhammer3.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER III",
+  "mainWH2Folder": "The main Warhammer 2 folder that contains Warhammer2.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER II",
+  "mainThreeKingdomsFolder": "The main Three Kingdoms folder that contains Three_Kingdoms.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War THREE KINGDOMS",
   "wh3Folder": "WH3 folder:",
+  "wh2Folder": "WH2 folder:",
+  "threeKingdomsFolder": "Three Kingdoms folder:",
   "selectWH3Folder": "Select WH3 Folder",
+  "selectWH2Folder": "Select WH2 Folder",
+  "selectThreeKingdomsFolder": "Select Three Kingdoms Folder",
   "wh3ContentFolder": "The Warhammer 3 Steam Workshop content folder named 1142710 (which is the steam ID for WH3) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1142710",
+  "wh2ContentFolder": "The Warhammer 2 Steam Workshop content folder named 594570 (which is the steam ID for WH2) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\594570",
+  "threeKingdomsContentFolder": "The Three Kingdoms Steam Workshop content folder named 779340 (which is the steam ID for 3K) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\779340",
   "contentFolder": "Content folder:",
   "selectContentFolder": "Select Content Folder",
   "setLoadOrderFor": "Set Load Order For",
@@ -181,7 +196,7 @@
   "autoStartCustomBattles1": "For repetitive visual testing that involves restarting the game.",
   "autoStartCustomBattles2": "Set up a custom battle once and enable this to auto-enter it.",
   "setFolderPaths": "Set Folder Paths",
-  "setFolderPathsMsg": "Set WH3 and Steam Workshop content folder paths.",
+  "setFolderPathsMsg": "Set Game and Steam Workshop content folder paths.",
   "categoryFilter": "Category filter",
   "categoriesFilter": "Categories filter",
   "nameFilter": "Name filter",
