--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -221,5 +221,20 @@
   "modCustomizationHelp1": "This panel allows you to customize mods, currently you can disable units, buildings and agents (lords and heroes).",
   "modCustomizationHelp2": "The way the game handles unit permissions, a unit can have a group permission (which can affect multiple factions) or a per-faction permission, or both. For game stability reasons only group permissions can be disabled. Note this won't affect custom battles since that uses a different system!",
   "modCustomizationHelp3": "Generic agents (lords and heroes) are tied to campaign groups and you can disable them that way, except for legendary agents which have their own tab.",
-  "modCustomizationHelp4": "The manager customizes a mod by creating a copy of the pack, with the necessary changes, inside a new 'whmm_overwrites' subfolder inside your WH3 folder each time you start the game. Note those copies are currently never deleted or cleaned up. I'm not sure how this affects multiplayer but it's likely you'll get 'different versions' warnings since the game thinks your packs are different even when they're not, but I'm not sure. Removing the customization for a mod will also give you a warning when loading a save that the pack is missing since we're now using the original mod pack, not the customized version of it, but you can ignore that."
+  "modCustomizationHelp4": "The manager customizes a mod by creating a copy of the pack, with the necessary changes, inside a new 'whmm_overwrites' subfolder inside your WH3 folder each time you start the game. Note those copies are currently never deleted or cleaned up. I'm not sure how this affects multiplayer but it's likely you'll get 'different versions' warnings since the game thinks your packs are different even when they're not, but I'm not sure. Removing the customization for a mod will also give you a warning when loading a save that the pack is missing since we're now using the original mod pack, not the customized version of it, but you can ignore that.",
+  "setFolderPathsManuallyWH3": "The mod manager tried to get WH3 folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyThreeKingdoms": "The mod manager tried to get Three Kingdoms folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyOptionallyWH3": "The mod manager automatically found WH3 folder paths from the Windows Registry, but you can set them manually here.",
+  "setFolderPathsManuallyOptionallyThreeKingdoms": "The mod manager automatically found Three Kingdoms folder paths from the Windows Registry, but you can set them manually here.",
+  "wh2": "Warhammer 2",
+  "wh3": "Warhammer 3",
+  "threeKingdoms": "Three Kingdoms",
+  "mainWH2Folder": "The main Warhammer 2 folder that contains Warhammer2.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER II",
+  "mainThreeKingdomsFolder": "The main Three Kingdoms folder that contains Three_Kingdoms.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War THREE KINGDOMS",
+  "wh2Folder": "WH2 folder:",
+  "threeKingdomsFolder": "Three Kingdoms folder:",
+  "selectWH2Folder": "Select WH2 Folder",
+  "selectThreeKingdomsFolder": "Select Three Kingdoms Folder",
+  "wh2ContentFolder": "The Warhammer 2 Steam Workshop content folder named 594570 (which is the steam ID for WH2) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\594570",
+  "threeKingdomsContentFolder": "The Three Kingdoms Steam Workshop content folder named 779340 (which is the steam ID for 3K) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\779340"
 }
