updated chinese translation

--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -6,7 +6,7 @@
   "priorityTooltipOne": "序号越小的模组加载优先级越高",
   "priorityTooltipTwo": "右击模组序号以重置其排序或者右击此处以重置所有模组排序",
   "priorityTooltipThree": "除非你有特殊原因，否则请勿更改模组排序",
-  "order": "命令",
+  "order": "优先级",
   "pack": "文件名",
   "dataPacks": "Data文件夹中的pack文件名",
   "enabled": "已启用",
@@ -57,7 +57,7 @@
   "enabledMods": "已启用模组：",
   "outdatedMergedModsTooltip": "其中一些整合模组可能包含过期模组，更新模组（右键点击）并生成新的整合模组！",
   "outdatedMergedMods": "已过期整合模组",
-  "play": "开始游戏",
+  "play": "启动",
   "continue": "继续游戏",
   "dbViewer": "DB Viewer",
   "allMods": "所有模组",
@@ -86,13 +86,13 @@
   "setLoadOrderMessage1": "为此模组设置加载优先级。正常情况下，不应该更改模组的加载顺序，此举可能导致模组之间出现冲突的问题",
   "setLoadOrderMessage2": "如果你没有特殊原因，请不要改动加载顺序！",
   "setLoadOrder": "设定加载顺序",
-  "goToWorkshopPage": "跳转创意工坊页面",
+  "goToWorkshopPage": "跳转创意工坊网页",
   "openInSteam": "在steam中打开",
   "keepAlwaysEnabled": "保持永久启用",
   "keepAlwaysEnabledTooltip": "模组将保持启用（即便是隐藏的模组）",
   "hideFromListTooltip": "从列表中隐藏并停用选定模组",
   "hideFromList": "从列表中隐藏",
-  "showInExplorer": "在网页浏览器中打开",
+  "showInExplorer": "在文件夹中打开",
   "showInRPFM": "在RPFM打开",
   "openInViewer": "在Viewer打开",
   "copyPathToClipboard": "将文件路径复制到粘贴板",
