performance: use readSync for reading files

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -33,6 +33,7 @@
   "files": "Files",
   "tables": "Tables",
   "dbTable": "DB Table",
+  "tableColumn": "Table column",
   "help": "Help",
   "collisionWith": "Collision with",
   "in": "in",
