--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -311,6 +311,7 @@
   "missingDBKey": "Missing DB key",
   "missingKeyIsReferencedIn": "is referenced in <originFileSuffix>, column <originFieldName>",
   "compatHelpFour": "The Missing Keys tab searches for missing database references (keys) in mods. DB tables reference each other by key columns, so for example there is a database table that gives attributes like unbreakable to units, so that table needs to reference both the units table and the attributes table. So if that table has a row that says give the unit 'Empire Swordsmen' unbreakable then that means in the units table the Empire Swordsmen need to exist. Missing DB keys can be caused by game updates or missing dependency mods. If they're missing the game won't start at all.",
+  "compatHelpFive": "The Duplicate Keys tab searches for duplicate Id keys among all the mods. If a mod replaces the whole row such a duplicate is fine, for example for a mod and its submod.",
   "noFileCollisionsFound": "No file collisions found!",
   "noDBKeyCollisionsFound": "No database key collisions found!",
   "noMissingDBKeysFound": "No missing database keys found!",
@@ -318,5 +319,9 @@
   "disableAll": "Disable All",
   "addCategory": "Add category:",
   "addCategoryHelp1": "Hold Ctrl to remove category.",
-  "addCategoryHelp2": "Hold Ctrl+Shift to replace all categories."
+  "addCategoryHelp2": "Hold Ctrl+Shift to replace all categories.",
+  "duplicateKeys": "Duplicate Keys",
+  "noDuplicateKeysFound": "No duplicate keys found!",
+  "packName": "Pack Name",
+  "duplicateDBKey": "Duplicate DB Key"
 }
