Total War Attila support

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -86,6 +86,7 @@
   "wh2": "Warhammer 2",
   "wh3": "Warhammer 3",
   "threeKingdoms": "Three Kingdoms",
+  "attila": "Attila",
   "mainWH3Folder": "The main Warhammer 3 folder that contains Warhammer3.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER III",
   "mainWH2Folder": "The main Warhammer 2 folder that contains Warhammer2.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War WARHAMMER II",
   "mainThreeKingdomsFolder": "The main Three Kingdoms folder that contains Three_Kingdoms.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War THREE KINGDOMS",
@@ -98,6 +99,12 @@
   "wh3ContentFolder": "The Warhammer 3 Steam Workshop content folder named 1142710 (which is the steam ID for WH3) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1142710",
   "wh2ContentFolder": "The Warhammer 2 Steam Workshop content folder named 594570 (which is the steam ID for WH2) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\594570",
   "threeKingdomsContentFolder": "The Three Kingdoms Steam Workshop content folder named 779340 (which is the steam ID for 3K) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\779340",
+  "mainAttilaFolder": "The main Attila folder that contains Attila.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Attila",
+  "attilaFolder": "Attila folder:",
+  "attilaContentFolder": "The Attila Steam Workshop content folder named 325610 (which is the steam ID for Attila) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\325610",
+  "selectAttilaFolder": "Select Attila Folder",
+  "setFolderPathsManuallyAttila": "The mod manager tried to get Attila folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyOptionallyAttila": "The mod manager automatically found Attila folder paths from the Windows Registry, but you can set them manually here.",
   "contentFolder": "Content folder:",
   "selectContentFolder": "Select Content Folder",
   "setLoadOrderFor": "Set Load Order For",
