check for missing files, support for troy and pharaoh, keep Steam honest when resubbing

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -341,11 +341,13 @@
   "fileErrors": "File Errors",
   "noFileErrorsFound": "No file errors found!",
   "packFileName": "File Name Inside Mod/Pack",
+  "fileInsidePack": "File Inside Pack: <PACKNAME>",
   "duplicateListenerName": "Duplicate Listener Name",
   "line": "Line",
   "column": "Column",
   "compatHelpSix": "The Duplicate Listener Names tab searches for duplicate listener names added via 'core:add_listener' inside Lua scripts. This is not usually an issue unless there is also a core:remove_listener involved due to copy-pasting from another script. Still, not having duplicate listener names is always good practice.",
   "compatHelpSeven": "The File Errors tab parses Lua and XML files (this includes variantmeshdefinitions) for syntax errors. For Lua this can't catch run-time errors but can catch some issuse. Some XML errors can also be a non-issue ingame because the ingame XML parsers is very tolerant of malformed XML.",
+  "compatHelpEight": "The Missing Files tab lists files that are referenced in some other file, but don't actually exist. It's possible for this to not be an issue since mods can contain unused files. Icons for the file types:",
   "forceResubscribe": "Force Resubscribe",
   "forceResubscribeMsg": "Force steam to unsubscribe and then subscribe to the same mods, which deletes and downloads the mods. In cases where Force Re-Download isn't enough. By default this is for enabled mods, hold Shift for all mods.",
   "collapseAll": "Collapse All",
@@ -361,5 +363,23 @@
   "modCreated": "Mod Created",
   "failedUploadingMod": "Failed Uploading Mod!",
   "missingModThumbnail": "Missing mod thumbnail!",
-  "thumbnailTooBig": "Thumbnail size is too big!"
+  "thumbnailTooBig": "Thumbnail size is too big!",
+  "compatCheckVanillaPacksMsg": "When running Compat Check should vanilla game files be parsed as well. Leave off usually, only useful for people finding and fixing vanilla issues.",
+  "compatCheckVanillaPacks": "Compat Check Vanilla Packs",
+  "troy": "Troy",
+  "mainTroyFolder": "The main Troy folder that contains Troy.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Troy",
+  "troyFolder": "Troy folder:",
+  "troyContentFolder": "The Troy Steam Workshop content folder named 1099410 (which is the steam ID for Troy) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1099410",
+  "selectTroyFolder": "Select Troy Folder",
+  "setFolderPathsManuallyTroy": "The mod manager tried to get Troy folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyOptionallyTroy": "The mod manager automatically found Troy folder paths from the Windows Registry, but you can set them manually here.",
+  "pharaoh": "Pharaoh",
+  "mainPharaohFolder": "The main Pharaoh folder that contains Pharaoh.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Pharaoh",
+  "pharaohFolder": "Pharaoh folder:",
+  "pharaohContentFolder": "The Pharaoh Steam Workshop content folder named 1937780 (which is the steam ID for Pharaoh) that contains mods, for example C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\1937780",
+  "selectPharaohFolder": "Select Pharaoh Folder",
+  "setFolderPathsManuallyPharaoh": "The mod manager tried to get Pharaoh folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
+  "setFolderPathsManuallyOptionallyPharaoh": "The mod manager automatically found Pharaoh folder paths from the Windows Registry, but you can set them manually here.",
+  "noMissingFilesFound": "No missing files found!",
+  "missingFiles": "Missing Files"
 }
