updated most packages

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -382,7 +382,7 @@
   "setFolderPathsManuallyOptionallyPharaoh": "The mod manager automatically found Pharaoh folder paths from the Windows Registry, but you can set them manually here.",
   "noMissingFilesFound": "No missing files found!",
   "missingFiles": "Missing Files",
-  "skillsViewer": "Skills (WIP)",
+  "skillsViewer": "Skills",
   "dynasties": "Pharaoh Dynasties",
   "mainDynastiesFolder": "The main Dynasties folder that contains Pharaoh.exe, for example C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War PHARAOH DYNASTIES",
   "dynastiesFolder": "Dynasties folder:",
@@ -391,5 +391,8 @@
   "setFolderPathsManuallyDynasties": "The mod manager tried to get Pharaoh Dynasties folder locations from Windows Registry, but it couldn't find them! You'll have to set them manually!",
   "setFolderPathsManuallyOptionallyDynasties": "The mod manager automatically found Pharaoh Dynasties folder paths from the Windows Registry, but you can set them manually here.",
   "chooseNewModTag": "Choose tag for the new mod:",
-  "upload": "Upload"
+  "upload": "Upload",
+  "showHiddenSkills": "Show Hidden Skills",
+  "showHiddenModifiersInsideSkills": "Show Hidden Modifiers Inside Skills",
+  "options": "Options"
 }
