use correct appid when creating a link for a new Steam game collection

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -67,8 +67,8 @@
   "enabledModsCapitalized": "Enabled Mods",
   "categories": "Categories",
   "createSteamCollection": "Create Steam Collection",
-  "openSteamCollectionsPage": "Open Steam Page For Creating WH3 Collections",
-  "openSteamCollectionsPageTooltip": "Open Steam Page For Creating WH3 Collections",
+  "openSteamCollectionsPage": "Open Steam Page For Creating Game Collections",
+  "openSteamCollectionsPageTooltip": "Open Steam Page For Creating Game Collections",
   "copyCollectionScript": "Copy Collection Script To Clipboard",
   "copyCollectionScriptTooltip1": "Will paste into clipboard a script for populating currently enabled mods into a collection.",
   "copyCollectionScriptTooltip2": "Hold Shift if you want to copy all mods, not just enabled mods.",
