Add a search input to the Saved Games modal

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -394,5 +394,6 @@
   "upload": "Upload",
   "showHiddenSkills": "Show Hidden Skills",
   "showHiddenModifiersInsideSkills": "Show Hidden Modifiers Inside Skills",
-  "options": "Options"
+  "options": "Options",
+  "searchSaves": "Search Saved Files"
 }
