new feature: queue game relaunch while the game is still running

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -394,5 +394,8 @@
   "upload": "Upload",
   "showHiddenSkills": "Show Hidden Skills",
   "showHiddenModifiersInsideSkills": "Show Hidden Modifiers Inside Skills",
-  "options": "Options"
+  "options": "Options",
+  "relaunchingGame": "Auto-relaunching game (click to cancel)...",
+  "queueUpRelaunchingGame": "Click to queue up relaunching the game once the game is closed.",
+  "gameCurrentlyRunning": "Game is currently running!"
 }
